--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:In+7izX99lVtUUDEWVCNtyaTJxE/kXM8gP038fLA5MA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
