--- a/.env.example
+++ b/.env.example
@@ -62,5 +62,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="Explore Cebu"
 VITE_PORT=5173
