--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "concurrently": "^9.0.1",
         "dotenv": "^16.5.0",
         "laravel-vite-plugin": "^1.0",
+        "leaflet.markercluster": "^1.5.3",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
         "sweetalert2": "^11.22.0",
