--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "vite": "^6.2.0",
         "vue": "^3.5.13",
         "vue-star-rating": "^1.7.0",
+        "vue3-google-map": "^0.22.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
